# donglora

./: .gitignore  ANSWERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Justfile  README.md  V4  build.rs  justfile  mise.toml
.cargo/: config.toml
.hypothesis/constants/: acbb6a9ef6a5a354
clients/python/: README.md  pyproject.toml
clients/python/donglora/: __init__.py
clients/rust/: CHANGELOG.md  CLAUDE_TODO.md  Cargo.toml  README.md  justfile
clients/rust/src/: client.rs  codec.rs  connect.rs  discovery.rs  lib.rs  protocol.rs  transport.rs
corpus/: build_hand.py  schema.json  validate.py
corpus/hand/: ack_basic.json  advert_feat_flags_as_name.json  advert_no_appdata.json  advert_truncated.json  bad_path_len.json  empty_packet.json  grp_txt_basic.json  noise_packet.json  path_3byte_hash.json  req_transport_direct.json  response_corrupted_pathlen_1.json  too_short.json  trace_basic.json  txt_msg_direct_2b_hash.json  txt_msg_flood_with_loops.json
crates/donglora-cobs/: Cargo.toml  README.md
crates/donglora-cobs/fuzz/: Cargo.toml
crates/donglora-cobs/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs
crates/donglora-cobs/src/: lib.rs
docs/: PROTOCOL.md
examples/: .gitignore  README.md  all_commands.py  donglora.py  justfile  lora_bridge.py  mise.toml  ping_pong.py  pyproject.toml  simple_rx.py  simple_tx.py
examples/meshcore/: README.md  ai_bot.py  channels.csv  meshcore_rx.py  telemetry_monitor.py
examples/meshcore/corpus/: build_hand.py  generate.py  validate.py
examples/meshcore/corpus/hand/: ack_with_path.json  advert_basic.json  advert_emoji_name.json  advert_location.json  advert_sensor.json  advert_with_path.json  anon_req_tc_fallback.json  bad_path_len.json  bad_path_len_reserved_hash_size.json  control_discover_req.json  multipart_ack.json  path_4byte_hash.json  response_corrupted_pathlen_2.json  response_valid_1hop.json  response_valid_2hop.json  too_short_2bytes.json  trace_4byte_hash.json
firmware/: .gitignore  Cargo.toml  PROTOCOL.md  README.md  TODO.md  build.rs  justfile  mise.toml
firmware/.cargo/: config.toml
firmware/ld/: nrf52840-memory.x
firmware/src/: channel.rs  display.rs  main.rs  protocol.rs  protocol_io.rs
firmware/src/board/: PORTING.md  esp32s3.rs  heltec_v3.rs  heltec_v3_uart.rs  heltec_v4.rs  mod.rs.j2  rak_wisblock_4631.rs  traits.rs  wio_tracker_l1.rs
firmware/src/display/: mod.rs  render.rs  sh1106.rs  task.rs
firmware/src/driver/: mod.rs  simple_led.rs  ws2812.rs
firmware/src/hal/: esp32s3.rs  mod.rs  nrf52840.rs
firmware/src/host/: mod.rs  uart.rs  usb.rs
firmware/src/radio/: task.rs
firmware/src/uart/: mod.rs  task.rs
firmware/src/usb/: task.rs
mux/python/: README.md  justfile  pyproject.toml
mux/python/donglora_mux/: __init__.py  __main__.py
mux/rust/: CHANGELOG.md  Cargo.toml  README.md  justfile
mux/rust/src/: daemon.rs  intercept.rs  main.rs  session.rs
src/: channel.rs  error.rs  main.rs  protocol.rs
src/board/: PORTING.md  esp32s3.rs  heltec_v3.rs  heltec_v4.rs  mod.rs.j2  rak_4631.rs  rak_wisblock_4631.rs  traits.rs
src/display/: mod.rs  render.rs  task.rs
src/radio/: mod.rs  task.rs
src/usb/: mod.rs  task.rs
tools/: channels.csv  meshcore_rx.py  test_ping.py
