[package]
name = "lora-dongle"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cfg-if = "1.0"
critical-section = "1.2"
defmt = "0.3"
embassy-embedded-hal = "0.2"
embassy-executor = { version = "0.6", features = ["task-arena-size-12288", "executor-thread"] }
embassy-sync = "0.6"
embassy-time = "0.3"
embassy-usb = { version = "0.3", features = ["defmt"] }
heapless = { version = "0.8", features = ["serde"] }
lora-phy = "3.0"
postcard = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
static_cell = "2.1"

# nRF52840 (RAK 4631)
cortex-m-rt = { version = "0.7", optional = true }
embassy-nrf = { version = "0.2", optional = true, features = ["nrf52840", "gpiote", "time-driver-rtc1", "defmt"] }
panic-probe = { version = "0.3", optional = true, features = ["print-defmt"] }

[build-dependencies]
minijinja = "2.0"
owo-colors = "4.0"

[features]
rak_4631 = [
    "dep:cortex-m-rt",
    "dep:embassy-nrf",
    "dep:panic-probe",
    "embassy-executor/arch-cortex-m",
]
